Modified order of patients to reflect omission of HRNR

--- a/Manuscript_Fig1-mutation_landscape_plot-recurrent_genes_for_supplementary.Rmd
+++ b/Manuscript_Fig1-mutation_landscape_plot-recurrent_genes_for_supplementary.Rmd
@@ -64,7 +64,10 @@ annot.colors <- list(
                             "No_data"="white"),
   Biopsy_Site = c("Mediastinal"="mediumpurple1", "Non-mediastinal"="black"))
 
-patients.ordered <- c("PA002", "PA014", "PA070", "PA011", "PA010", "PA072", "PA056", "PA045", "PA016", "PA018", "PA009", "PA069", "PA003", "PA073", "PA021", "PA017", "PA013", "PA001", "PA015", "PA034", "PA031", "PA054", "PA076", "PA097", "PA042", "PA035", "PA067", "PA082", "PA028", "PA075", "PA049", "PA077", "PA038", "PA022", "PA062", "PA089", "PA093", "PA053", "PA052", "PA005", "PA064", "PA027", "PA037", "PA063", "PA096", "PA065", "PA026", "PA086", "PA058", "PA068", "PA006", "PA079", "PA024", "PA088", "PA020", "PA033", "PA008", "PA004", "PA080", "PA083", "PA060", "PA057", "PA092", "PA055", "PA044", "PA023", "PA059", "PA036", "PA039", "PA048", "PA007", "PA061", "PA041", "PA043", "PA047", "PA040", "PA029", "PA025", "PA030", "PA019", "PA085", "PA071", "PA095", "PA074", "PA078", "PA084", "PA081", "PA032", "PA066", "PA091", "PA050", "PA094", "PA051", "PA087")
+#patients.ordered <- c("PA002", "PA014", "PA070", "PA011", "PA010", "PA072", "PA056", "PA045", "PA016", "PA018", "PA009", "PA069", "PA003", "PA073", "PA021", "PA017", "PA013", "PA001", "PA015", "PA034", "PA031", "PA054", "PA076", "PA097", "PA042", "PA035", "PA067", "PA082", "PA028", "PA075", "PA049", "PA077", "PA038", "PA022", "PA062", "PA089", "PA093", "PA053", "PA052", "PA005", "PA064", "PA027", "PA037", "PA063", "PA096", "PA065", "PA026", "PA086", "PA058", "PA068", "PA006", "PA079", "PA024", "PA088", "PA020", "PA033", "PA008", "PA004", "PA080", "PA083", "PA060", "PA057", "PA092", "PA055", "PA044", "PA023", "PA059", "PA036", "PA039", "PA048", "PA007", "PA061", "PA041", "PA043", "PA047", "PA040", "PA029", "PA025", "PA030", "PA019", "PA085", "PA071", "PA095", "PA074", "PA078", "PA084", "PA081", "PA032", "PA066", "PA091", "PA050", "PA094", "PA051", "PA087")
+
+# without HRNR
+patients.ordered <- c("PA070", "PA011", "PA010", "PA072", "PA056", "PA045", "PA016", "PA002", "PA018", "PA009", "PA069", "PA014", "PA003", "PA073", "PA021", "PA017", "PA013", "PA001", "PA015", "PA034", "PA032", "PA031", "PA054", "PA076", "PA097", "PA042", "PA035", "PA067", "PA066", "PA082", "PA028", "PA075", "PA049", "PA091", "PA077", "PA038", "PA022", "PA062", "PA089", "PA093", "PA053", "PA050", "PA052", "PA005", "PA064", "PA027", "PA037", "PA063", "PA096", "PA094", "PA065", "PA026", "PA086", "PA058", "PA068", "PA006", "PA079", "PA024", "PA088", "PA020", "PA033", "PA008", "PA004", "PA051", "PA080", "PA083", "PA060", "PA057", "PA092", "PA055", "PA044", "PA023", "PA059", "PA036", "PA039", "PA048", "PA007", "PA061", "PA041", "PA043", "PA047", "PA040", "PA029", "PA025", "PA030", "PA019", "PA085", "PA071", "PA095", "PA074", "PA078", "PA084", "PA087", "PA081")
 
 #genes.to_ignore <- c("MUC12")
 
